fixing spacing at top of section pages

--- a/themes/digital.gov/src/uswds/scss/_article.scss
+++ b/themes/digital.gov/src/uswds/scss/_article.scss
@@ -1,7 +1,7 @@
 // Article
 
 main{
-	@include u-padding-y(0);
+	@include u-padding-y(3);
 	@include at-media('tablet') {
 		@include u-padding-y(6);
 	}
